--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
 
       <p class="has-text-centered">{{ randomText }}</p>
       <div class="field">
-        <input class="input" />
+        <input class="input" (input)="onInput($event)" />
       </div>
-      <div class="box has-text-centered">
+      <div *ngIf="enteredText === randomText" class="box has-text-centered">
       <h1 class="title">Success</h1>
     </div>
     </div>
